Removed social-verify block
