# packages/shared-ui/src/flowHandler/types.ts
@@ -6,7 +6,7 @@ export type BlockDataSignupInit = {
   email: TextFieldWithError | null;
   phone: TextFieldWithError | null;
   userName: TextFieldWithError | null;
-  socialLogins: SocialLogin[];
+  socialData: SocialData;
 };
 
 export type BlockDataLoginInit = {
@@ -17,7 +17,7 @@ export type BlockDataLoginInit = {
   emailEnabled: boolean;
   usernameEnabled: boolean;
   phoneEnabled: boolean;
-  socialLogins: SocialLogin[];
+  socialData: SocialData;
 };
 
 export type BlockDataPasskeyAppend = {
@@ -68,6 +68,13 @@ export type SocialLogin = {
   name: string;
   // icon: string;
   // url: string;
+};
+
+export type SocialData = {
+  providers: SocialLogin[];
+  oAuthUrl?: string;
+  started: boolean;
+  finished: boolean;
 };
 
 export type TextFieldWithError = {
