# packages/web-core/src/api/index.ts
@@ -8,10 +8,12 @@ export {
   BlockBody,
   GeneralBlockPasskeyAppend,
   GeneralBlockVerifyIdentifier,
-  GeneralBlockSocialVerify,
   ProcessResponse,
   ProcessCommon,
   ContinueOnOtherDevice,
+  GeneralBlockSignupInit,
+  LoginIdentifier,
   ContinueOnOtherDeviceReasonEnum,
   SocialProviderType,
+  SocialDataStatusEnum,
 } from './v2';
